--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <g stroke="null" id="svg_2"/>
           </g>
         </g>
-      </svg> em Curitiba |
+      </svg> em Curitiba | by
       <a href="http://andrestraube.com.br">
-        Contato
+        Andre Straube
       </a>
     </footer>
   </body>
