--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 
     <link rel="canonical" href="http://www.andrestraube.com.br" />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/logos/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/logos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/logos/favicon-16x16.png">
+    <link rel="manifest" href="/static/images/logos/site.webmanifest">
+    <link rel="mask-icon" href="/static/images/logos/safari-pinned-tab.svg" color="#191919">
+    <link rel="shortcut icon" href="/static/images/logos/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="/static/images/logos/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
